syntax = "proto3";

package protoc_gen_crud.test_cases.as_timestamp_field;

option go_package = "github.com/samlitowitz/protoc-gen-crud/test-cases/as-timestamp-field";

import "protoc-gen-crud/options/annotations.proto";
import "google/protobuf/timestamp.proto";

message AsTimestamp {
  option (protoc_gen_crud.options.crud_message_options) = {
    implementations: [SQLITE, PGSQL]
    primaryKey: ["id"]
  };
  int32 id = 1;
  google.protobuf.Timestamp timestamp = 2 [
    (protoc_gen_crud.options.crud_field_options) = {
      asTimestamp: true
    }
  ];
}
